--- a/src/source/views/index.html
+++ b/src/source/views/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <form method = "POST" id="weatherForm">
+        <form>
             <input id="startButton" type="button" value ="Start"/>
         </form>
     </main>
