--- a/src/source/views/login.html
+++ b/src/source/views/login.html
@@ -11,39 +11,41 @@
         <main>
             <p> <strong> Welcome </strong> </p>
             <form id="loginForm">
-                <input type = "text" id = "username" placeholder="Username"/>
+                <input type="text" id ="username" placeholder="Username" required>
                 <br> <br>
-                <input type = "text" id = "password" placeholder="Password"/>
+                <input type="password" id ="password" placeholder="Password" required>
                 <br> <br>
-                <input type= "submit" id = "postSubmit" value ="Login"/>
+                <button type="submit">Login</button>
             </form>
-        
+            <div class="message" id="message"></div>
         </main>
     </div>
     
-    <script src = "../public/functions.js"></script>
+    <script src="../public/functions.js"></script>
 
-    <script>
+    <!-- <script>
+        const { ipcRenderer } = require('electron');
+
         document.getElementById("loginForm").addEventListener("submit", function() {
             event.preventDefault();
 
         var username = document.getElementById("username").value;
         var password = document.getElementById("password").value;
 
-        if (isAuthenticated(username,password)){
+        if (runLoginScript(scriptPath="src/database/login.py",args=[username,password])=="True"){
             window.location.href = "map.html";
             postSubmit = true;
         } else {
             alert("Invalid username or password");
         }
     });
-    </script>
+    </script> -->
 
-    <script>
+    <!-- <script>
         document.getElementById('postSubmit').addEventListener('click', () => {
             remote.app.emit('open-map-page');
         });
-    </script>
+    </script> -->
 
 
 </body>
