--- a/src/source/views/map.html
+++ b/src/source/views/map.html
@@ -171,7 +171,7 @@
     </script>
 
     <script>
-        document.getElementById("oders").addEventListener("click", () => {
+        document.getElementById("orders").addEventListener("click", () => {
             remote.app.emit('order-page');
         });
     </script>
