--- a/src/source/views/inventory.html
+++ b/src/source/views/inventory.html
@@ -24,7 +24,7 @@
               <span class="link-text">Dashboard</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left inventory">
+          <li class="navbar-item flexbox-left" id = "inventory">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="home-outline"></ion-icon>
@@ -32,7 +32,7 @@
               <span class="link-text">Inventory</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left">
+          <li class="navbar-item flexbox-left" id = "order">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="folder-open-outline"></ion-icon>
@@ -40,7 +40,7 @@
               <span class="link-text">Orders</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left">
+          <li class="navbar-item flexbox-left" id = "sales">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="pie-chart-outline"></ion-icon>
@@ -48,7 +48,7 @@
               <span class="link-text">Sales</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left">
+          <li class="navbar-item flexbox-left" id = "performance">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="people-outline"></ion-icon>
@@ -122,7 +122,7 @@
         </div>
     </div>
 
-    <div class="table">
+    <ul class="table">
         <h2><small>Products</small></h2>
         <div class="Card">
             <div class="CardInner">
@@ -138,7 +138,10 @@
             </div>
         </div>
 
-
+        <div class ="frame" id='load'>
+          <button type="click">Load Table</button>
+        </div>
+        
         <div class ="frame">
             <div class="button-container">
             <span class="button-text">Add Product</span>
@@ -148,57 +151,26 @@
 
 
 
-        <ul class="responsive-table">
+        <ul class="responsive-table" id="inventory_table">
           <li class="table-header">
-            <div class="col col-1">SKU</div>
-            <div class="col col-2">Name</div>
-            <div class="col col-3">Number <br> in Stock</div>
-            <div class="col col-4">Number <br> on Order</div>
-            <div class="col col-5">Unit <br> Cost</div>
-            <div class="col col-6">Inventory <br> Value</div>
-            <div class="col col-7">Expected <br> Sales</div>
-          </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="SKU">FRG-123-LG-2</div>
-            <div class="col col-2" data-label="Name">LG Smart Fridge</div>
-            <div class="col col-3" data-label="StockAmount">12</div>
-            <div class="col col-4" data-label="OrderAmount">3</div>
-            <div class="col col-5" data-label="UnitCost">$9,000</div>
-            <div class="col col-6" data-label="InventoryValue">$108,000</div>
-            <div class="col col-7" data-label="ExpectedSales">4</div>
-          </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="SKU">NDS-424-DS-1</div>
-            <div class="col col-2" data-label="Name">Nintendo DS</div>
-            <div class="col col-3" data-label="StockAmount">43</div>
-            <div class="col col-4" data-label="OrderAmount">12</div>
-            <div class="col col-5" data-label="UnitCost">$250</div>
-            <div class="col col-6" data-label="InventoryValue">$10,750</div>
-            <div class="col col-7" data-label="ExpectedSales">30</div>
-          </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="SKU">42257</div>
-            <div class="col col-2" data-label="Name">John Smith</div>
-            <div class="col col-3" data-label="StockAmount">$341</div>
-            <div class="col col-4" data-label="OrderAmount">Pending</div>
-            <div class="col col-5" data-label="UnitCost">John Doe</div>
-            <div class="col col-6" data-label="InventoryValue">$350</div>
-            <div class="col col-7" data-label="ExpectedSales">Pending</div>
-          </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="SKU">42311</div>
-            <div class="col col-2" data-label="Name">John Carpenter</div>
-            <div class="col col-3" data-label="StockAmount">$115</div>
-            <div class="col col-4" data-label="OrderAmount">Pending</div>
-            <div class="col col-5" data-label="UnitCost">John Doe</div>
-            <div class="col col-6" data-label="InventoryValue">$350</div>
-            <div class="col col-7" data-label="ExpectedSales">Pending</div>
+              <div class="col col-1">SKU</div>
+              <div class="col col-2">Name</div>
+              <div class="col col-3">In Stock</div>
+              <div class="col col-4">On Order</div>
+              <div class="col col-5">Unit Cost</div>
+              <div class="col col-6">Inventory Value</div>
+              <div class="col col-7">Expected Sales</div>
           </li>
         </ul>
     </div>
 
 </body>
 
+<!-- for importing -->
+<!--data is now dictionary---->
+<script src ="../../backend/inventory.js" ></script>
+
+<!-- for searching -->
 <script>
     const searchInput = document.getElementById('products');
 
@@ -239,6 +211,7 @@
     document.getElementById("LogoMenu").addEventListener("click", function() {
     window.location.href = "map.html";
     redirectToMainMenu();
+    remote.app.emit('map-page');
   });
   
     function redirectToMainMenu() {
@@ -247,27 +220,38 @@
 </script>
 
 <script>
-    document.getElementById("LogoMenu").addEventListener("click", () => {
-        remote.app.emit('login-successful-page');
-    });
-</script>
-
-
-<script>
     document.getElementById("dashboard").addEventListener("click", function() {
     window.location.href = "dashboard.html";
-    redirectToDashboard();
+    remote.app.emit('dashboard-page');
 });
-
-    function redirectToDashboard() {
-        window.location.href = "dashboard.html";
-    }
 </script>
 
 <script>
-    document.getElementById("dashboard").addEventListener("click", () => {
-        remote.app.emit('dashboard-page');
-    });
+  document.getElementById("inventory").addEventListener("click", function() {
+  window.location.href = "inventory.html";
+  remote.app.emit('inventory-page');
+});
+</script>
+
+<script>
+  document.getElementById("order").addEventListener("click", function() {
+  window.location.href = "order.html";
+  remote.app.emit('order-page');
+});
+</script>
+
+<script>
+  document.getElementById("sales").addEventListener("click", function() {
+  window.location.href = "sales.html";
+  remote.app.emit('sales-page');
+});
+</script>
+
+<script>
+  document.getElementById("performance").addEventListener("click", function() {
+  window.location.href = "performance.html";
+  remote.app.emit('sales-page');
+});
 </script>
 
 <script>
