--- a/src/source/views/inventory.html
+++ b/src/source/views/inventory.html
@@ -24,7 +24,7 @@
               <span class="link-text">Dashboard</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left" id = "inventory">
+          <li class="navbar-item flexbox-left inventory">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="home-outline"></ion-icon>
@@ -32,7 +32,7 @@
               <span class="link-text">Inventory</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left" id = "order">
+          <li class="navbar-item flexbox-left">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="folder-open-outline"></ion-icon>
@@ -40,7 +40,7 @@
               <span class="link-text">Orders</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left" id = "sales">
+          <li class="navbar-item flexbox-left">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="pie-chart-outline"></ion-icon>
@@ -48,7 +48,7 @@
               <span class="link-text">Sales</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left" id = "performance">
+          <li class="navbar-item flexbox-left">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="people-outline"></ion-icon>
@@ -66,11 +66,19 @@
              <div class="one"></div>
              <div class="two"></div>
              <div class="three"></div>
+             <div class="four"></div>
           </div>
           <div class="top_menu">
             <div class="logo"></div>
             <ul>
-              <li><a href="#">
+            <li><a href="#" id = "setting">
+                    <i class="material-icons"></i>
+                    <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M511.9935 699.733c-102.4 0-187.733-85.333-187.733-187.733s85.333-187.733 187.733-187.733S699.7265 409.6 699.7265 512s-85.333 187.733-187.733 187.733z m472.177-250.311c-5.689-22.756-22.756-39.822-45.511-45.511l-11.378-5.689c-34.133-11.378-68.267-34.133-91.022-68.267s-22.756-73.956-17.067-113.778l5.689-11.378c5.689-17.067 0-45.511-17.067-62.578 0 0-17.067-11.378-56.889-34.133s-56.889-28.444-56.889-28.444c-22.756-5.689-45.511 0-62.578 17.067l-11.378 11.378c-28.444 22.756-68.267 39.822-108.089 39.822s-79.644-17.067-108.089-39.822l-5.689-17.067c-17.067-11.378-45.511-22.756-62.578-11.378 0 0-17.067 5.689-56.889 28.444s-56.889 34.133-56.889 34.133c-17.067 17.067-28.444 39.822-22.756 62.578l5.689 17.067c11.378 34.133 5.689 73.956-17.067 113.778-22.756 28.444-51.2 51.2-91.022 62.578l-11.378 5.689c-22.756 0-39.822 22.756-45.511 45.511 0 0-5.689 17.067-5.689 62.578s5.689 62.578 5.689 62.578c5.689 22.756 22.756 39.822 45.511 45.511l11.378 5.689c34.133 11.378 68.267 34.133 91.022 68.267s22.756 73.956 17.067 113.778l-5.689 11.378c-5.689 17.067 0 45.511 17.067 62.578 0 0 17.067 11.378 56.889 34.133s56.889 28.444 56.889 28.444c22.756 5.689 45.511 0 62.578-17.067l11.378-11.378c28.444-28.444 62.578-39.822 108.089-39.822 39.822 0 79.644 17.067 108.089 39.822l11.378 11.378c17.067 17.067 39.822 22.756 62.578 17.067 0 0 17.067-5.689 56.889-28.444s56.889-34.133 56.889-34.133 22.756-39.822 17.067-62.578l-5.689-17.067c-11.378-34.133-5.689-73.956 17.067-108.089s51.2-56.889 91.022-68.267l17.067-5.689c22.756-5.689 39.822-22.756 45.511-45.511 0 0 5.689-17.067 5.689-62.578-5.689-45.511-11.378-62.578-11.378-62.578z"  />
+                    </svg>
+                </a></li>
+
+            <li><a href="#" id = "download">
                 <i class="btn-circle-download">
                     <svg id="arrow" width="14px" height="20px" viewBox="17 14 14 20">
                     <path d="M24,15 L24,32"></path>
@@ -83,15 +91,16 @@
                     <path d="M24,1 L24,1 L24,1 C36.7025492,1 47,11.2974508 47,24 L47,24 L47,24 C47,36.7025492 36.7025492,47 24,47 L24,47 L24,47 C11.2974508,47 1,36.7025492 1,24 L1,24 L1,24 C1,11.2974508 11.2974508,1 24,1 L24,1 Z"></path>
                     </svg>
                 </i>
-    
                 </a></li>
-              <li><a href="#">
+
+            <li><a href="#" id = "profile">
                 <i class="material-icons"></i>
                 <svg class="svg-icon" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
                     <path d="M853.333333 938.666667H170.666667v-85.333334a213.333333 213.333333 0 0 1 213.333333-213.333333h256a213.333333 213.333333 0 0 1 213.333333 213.333333v85.333334z m-341.333333-384a256 256 0 1 1 0-512 256 256 0 0 1 0 512z"  />
                 </svg>
                 </a></li>
-              <li><a href="#">
+
+            <li><a href="#" id = "notification">
                 <i class="notification-box">
                     <span class="notification-count">1</span>
                     <div class="notification-bell">
@@ -122,11 +131,10 @@
         </div>
     </div>
 
-    <ul class="table">
+    <div class="table">
         <h2><small>Products</small></h2>
         <div class="Card">
             <div class="CardInner">
-            <label>Search the products</label>
                 <div class="container">
                     <div class="Icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#657789" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"/><line x1="21" y1="21" x2="16.65" y2="16.65"/></svg>
@@ -138,39 +146,173 @@
             </div>
         </div>
 
-        <div class ="frame" id='load'>
-          <button type="click">Load Table</button>
-        </div>
-        
+
         <div class ="frame">
             <div class="button-container">
             <span class="button-text">Add Product</span>
-            <a href="#" class="btn" id = addbutton >+</a>
+            <a href="#" class="btn" id = "addbutton" >+</a>
             </div>
         </div>
 
 
 
-        <ul class="responsive-table" id="inventory_table">
+        <ul class="responsive-table">
           <li class="table-header">
-              <div class="col col-1">SKU</div>
-              <div class="col col-2">Name</div>
-              <div class="col col-3">In Stock</div>
-              <div class="col col-4">On Order</div>
-              <div class="col col-5">Unit Cost</div>
-              <div class="col col-6">Inventory Value</div>
-              <div class="col col-7">Expected Sales</div>
+            <div class="col col-1">SKU</div>
+            <div class="col col-2">Name</div>
+            <div class="col col-3">Number <br> in Stock</div>
+            <div class="col col-4">Number <br> on Order</div>
+            <div class="col col-5">Unit <br> Cost</div>
+            <div class="col col-6">Inventory <br> Value</div>
+            <div class="col col-7">Expected <br> Sales</div>
+          </li>
+          <li class="table-row">
+            <div class="col col-1" data-label="SKU">FRG-123-LG-2</div>
+            <div class="col col-2" data-label="Name">LG Smart Fridge</div>
+            <div class="col col-3" data-label="StockAmount">12</div>
+            <div class="col col-4" data-label="OrderAmount">3</div>
+            <div class="col col-5" data-label="UnitCost">$9,000</div>
+            <div class="col col-6" data-label="InventoryValue">$108,000</div>
+            <div class="col col-7" data-label="ExpectedSales">4</div>
+          </li>
+          <li class="table-row">
+            <div class="col col-1" data-label="SKU">NDS-424-DS-1</div>
+            <div class="col col-2" data-label="Name">Nintendo DS</div>
+            <div class="col col-3" data-label="StockAmount">43</div>
+            <div class="col col-4" data-label="OrderAmount">12</div>
+            <div class="col col-5" data-label="UnitCost">$250</div>
+            <div class="col col-6" data-label="InventoryValue">$10,750</div>
+            <div class="col col-7" data-label="ExpectedSales">30</div>
+          </li>
+          <li class="table-row">
+            <div class="col col-1" data-label="SKU">PREE</div>
+            <div class="col col-2" data-label="Name">John Smith</div>
+            <div class="col col-3" data-label="StockAmount">$341</div>
+            <div class="col col-4" data-label="OrderAmount">Pending</div>
+            <div class="col col-5" data-label="UnitCost">John Doe</div>
+            <div class="col col-6" data-label="InventoryValue">$350</div>
+            <div class="col col-7" data-label="ExpectedSales">Pending</div>
+          </li>
+          <li class="table-row">
+            <div class="col col-1" data-label="SKU">42311</div>
+            <div class="col col-2" data-label="Name">John Carpenter</div>
+            <div class="col col-3" data-label="StockAmount">$115</div>
+            <div class="col col-4" data-label="OrderAmount">Pending</div>
+            <div class="col col-5" data-label="UnitCost">John Doe</div>
+            <div class="col col-6" data-label="InventoryValue">$350</div>
+            <div class="col col-7" data-label="ExpectedSales">Pending</div>
           </li>
         </ul>
     </div>
 
+    <!-- <div class="container">
+        <div class="cookiesContent" id="cookiesPopup">
+        <span class="arrow"></span>
+        <button class="close">✖</button>
+        <img src="../public/images/mini.png" alt="cookies-img" />
+        <p>We use cookies for improving user experience, analytics and marketing.</p>
+        <button class="accept">That's fine!</button>
+        </div>
+    </div>  -->
+
+    <!-- <div class="container">
+    <div class="modal" id = "modal">
+        <span class="arrow"></span>
+        <div class="modal-header">
+            <div class="modal-logo">
+                <span class="logo-circle">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="419.116" viewBox="0 0 512 419.116">
+                        <defs>
+                            <clipPath id="clip-folder-new">
+                                <rect width="512" height="419.116" />
+                            </clipPath>
+                        </defs>
+                        <g id="folder-new" clip-path="url(#clip-folder-new)">
+                            <path id="Union_1" data-name="Union 1" d="M16.991,419.116A16.989,16.989,0,0,1,0,402.125V16.991A16.989,16.989,0,0,1,16.991,0H146.124a17,17,0,0,1,10.342,3.513L227.217,57.77H437.805A16.989,16.989,0,0,1,454.8,74.761v53.244h40.213A16.992,16.992,0,0,1,511.6,148.657L454.966,405.222a17,17,0,0,1-16.6,13.332H410.053v.562ZM63.06,384.573H424.722L473.86,161.988H112.2Z" fill="var(--c-action-primary)" stroke="" stroke-width="1" />
+                        </g>
+                    </svg>
+                </span>
+            </div>
+            <button class="btn-close">✖
+            </button>
+        </div>
+        <div class="modal-body">
+            <h2 class="modal-title">Upload a file</h2>
+            <p class="modal-description">Attach the file below</p>
+            <button class="upload-area">
+                <span class="upload-area-icon">
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="340.531" height="419.116" viewBox="0 0 340.531 419.116">
+      <g id="files-new" clip-path="url(#clip-files-new)">
+        <path id="Union_2" data-name="Union 2" d="M-2904.708-8.885A39.292,39.292,0,0,1-2944-48.177V-388.708A39.292,39.292,0,0,1-2904.708-428h209.558a13.1,13.1,0,0,1,9.3,3.8l78.584,78.584a13.1,13.1,0,0,1,3.8,9.3V-48.177a39.292,39.292,0,0,1-39.292,39.292Zm-13.1-379.823V-48.177a13.1,13.1,0,0,0,13.1,13.1h261.947a13.1,13.1,0,0,0,13.1-13.1V-323.221h-52.39a26.2,26.2,0,0,1-26.194-26.195v-52.39h-196.46A13.1,13.1,0,0,0-2917.805-388.708Zm146.5,241.621a14.269,14.269,0,0,1-7.883-12.758v-19.113h-68.841c-7.869,0-7.87-47.619,0-47.619h68.842v-18.8a14.271,14.271,0,0,1,7.882-12.758,14.239,14.239,0,0,1,14.925,1.354l57.019,42.764c.242.185.328.485.555.671a13.9,13.9,0,0,1,2.751,3.292,14.57,14.57,0,0,1,.984,1.454,14.114,14.114,0,0,1,1.411,5.987,14.006,14.006,0,0,1-1.411,5.973,14.653,14.653,0,0,1-.984,1.468,13.9,13.9,0,0,1-2.751,3.293c-.228.2-.313.485-.555.671l-57.019,42.764a14.26,14.26,0,0,1-8.558,2.847A14.326,14.326,0,0,1-2771.3-147.087Z" transform="translate(2944 428)" fill="var(--c-action-primary)"/>
+      </g>
+    </svg>
+                </span>
+                <span class="upload-area-title">Drag file(s) here to upload.</span>
+                <span class="upload-area-description">
+                    Alternatively, you can select a file by <br/><strong>clicking here</strong>
+                </span>
+            </button>
+        </div>
+        <div class="modal-footer">
+            <button class="btn-secondary">Cancel</button>
+            <button class="btn-primary">Upload File</button>
+        </div>
+    </div>
+</div> -->
+
+
+
+<div class="container">
+    <div class="profileContent" id="profilePopup">
+    <span class="arrow"></span>
+    <img src="../public/images/mini.png" alt="cookies-img" />
+    <p>We use cookies for improving user experience, analytics and marketing.</p>
+    <button class="accept">Log out</button>
+    </div>
+</div>  
+
+
+
+
+<div class="container">
+    <div class="right-container" id = "modal">
+        <span class="arrow"></span>
+        <header>
+            <h1>Product Details</h1>
+            <div class="set">
+                <div class="SKU">
+                    <label id="SKU">SKU</label>
+                    <input id="SKU" type="text" placeholder="SKU">
+                </div>
+            </div>
+            <div class="set">
+                <div class="Name">
+                    <label id="Name">Name</label>
+                    <input id="Name" type="text" placeholder="Name">
+                </div>
+            </div>
+            <div class="set">
+                <div class="Amount">
+                    <label id="Amount">Amount</label>
+                    <input id="Amount" type="text" placeholder="Amount">
+                </div>
+            </div>
+            
+        </header>
+        <footer>
+            <div class="set">
+                <button id="back">Back</button>
+                <button id="next">Confirm</button>
+            </div>
+        </footer>
+    </div>
+
+</div> 
+
+
+
 </body>
 
-<!-- for importing -->
-<!--data is now dictionary---->
-<script src ="../../backend/inventory.js" ></script>
-
-<!-- for searching -->
 <script>
     const searchInput = document.getElementById('products');
 
@@ -211,7 +353,6 @@
     document.getElementById("LogoMenu").addEventListener("click", function() {
     window.location.href = "map.html";
     redirectToMainMenu();
-    remote.app.emit('map-page');
   });
   
     function redirectToMainMenu() {
@@ -220,62 +361,77 @@
 </script>
 
 <script>
+    document.getElementById("LogoMenu").addEventListener("click", () => {
+        remote.app.emit('login-successful-page');
+    });
+</script>
+
+
+<script>
     document.getElementById("dashboard").addEventListener("click", function() {
     window.location.href = "dashboard.html";
-    remote.app.emit('dashboard-page');
+    redirectToDashboard();
 });
+
+    function redirectToDashboard() {
+        window.location.href = "dashboard.html";
+    }
 </script>
 
 <script>
-  document.getElementById("inventory").addEventListener("click", function() {
-  window.location.href = "inventory.html";
-  remote.app.emit('inventory-page');
-});
-</script>
-
-<script>
-  document.getElementById("order").addEventListener("click", function() {
-  window.location.href = "order.html";
-  remote.app.emit('order-page');
-});
-</script>
-
-<script>
-  document.getElementById("sales").addEventListener("click", function() {
-  window.location.href = "sales.html";
-  remote.app.emit('sales-page');
-});
-</script>
-
-<script>
-  document.getElementById("performance").addEventListener("click", function() {
-  window.location.href = "performance.html";
-  remote.app.emit('sales-page');
-});
+    document.getElementById("dashboard").addEventListener("click", () => {
+        remote.app.emit('dashboard-page');
+    });
 </script>
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
-        const firstProfileImage = document.getElementById("addbutton");
-        const cookiePopup = document.getElementById("cookiesPopup");
-        const closeButton = document.querySelector(".cookiesContent .close");
-        const acceptButton = document.querySelector(".cookiesContent .accept");
-        
+        const addProduct = document.getElementById("addbutton");
+        const modal = document.getElementById("modal");
+        const closeButton = document.querySelector(".right-container footer #back");
     
-        firstProfileImage.addEventListener("click", function() {
-            cookiePopup.style.display = "block"; 
+        addProduct.addEventListener("click", function(event) {
+            event.preventDefault();
+            modal.style.display = "grid"; 
         });
     
         closeButton.addEventListener("click", function() {
-            cookiePopup.style.display = "none"; 
+            modal.style.display = "none"; 
         });
 
-        acceptButton.addEventListener("click", function() {
-            cookiePopup.style.display = "none"; 
-        });
     });
 
 </script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const profileButton = document.querySelector("#profile");
+        const profilePopup = document.getElementById("profilePopup");
+        const logOutButton = document.querySelector(".profileContent .accept");
+    
+        profileButton.addEventListener("click", function(event) {
+            profilePopup.style.display = "flex"; 
+        });
+    
+        document.addEventListener("click", function(event) {
+            const clickInsideProfileButton = profileButton.contains(event.target);
+            const clickInsideProfilePopup = profilePopup.contains(event.target);
+
+            if (!clickInsideProfileButton && !clickInsideProfilePopup) {
+                profilePopup.style.display = "none"; 
+            }
+        });
+
+        logOutButton.addEventListener("click", function(event) {
+            redirectToLogin();
+        });
+
+        function redirectToLogin() {
+            window.location.href = "login.html";
+        }
+    });
+</script>
+
 
 
 </html>
