--- a/src/source/public/map.css
+++ b/src/source/public/map.css
@@ -447,7 +447,20 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.03em;
     margin-top: 30px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
+
+.responsive-row {
+    max-height: 390px; 
+    overflow-y: auto;
+    margin: 0;
+    padding-bottom: 0;
+    list-style: none;
+    position: relative;
+}
+
 .table-row {
     background-color: #ffffff;
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
