fixed register, currently works but does not print out an error message when register is failed for reasons like password is too short

--- a/src/source/views/login.html
+++ b/src/source/views/login.html
@@ -22,7 +22,13 @@
     </div>
     
     <script src="../public/functions.js"></script>
+    <script>document.getElementById('loginForm').addEventListener('submit', (event) => {
+     event.preventDefault();
+     const username = document.getElementById('username').value;
+     const password = document.getElementById('password').value;
 
+     ipcRenderer.send('perform-login', { username, password });
+   }); </script>
     <!-- <script>
         const { ipcRenderer } = require('electron');
 
