fixed frontend crash for inventory, added template for sales and order.js

--- a/src/source/views/inventory.html
+++ b/src/source/views/inventory.html
@@ -122,6 +122,7 @@
         </div>
     </div>
 
+
     <ul class="table">
         <h2><small>Products</small></h2>
         <div class="Card">
@@ -150,7 +151,7 @@
         </div>
 
 
-
+    <div>
         <ul class="responsive-table" id="inventory_table">
           <li class="table-header">
               <div class="col col-1">SKU</div>
@@ -163,6 +164,8 @@
           </li>
         </ul>
     </div>
+</ul>
+
 
 </body>
 
