--- a/src/source/public/map.css
+++ b/src/source/public/map.css
@@ -431,6 +431,11 @@ body {
 
 /* Table in inventory page */
 
+#inventory_table {
+    height: 350px; /* Adjust this value as needed */
+    overflow-y: auto;
+}
+
 .table {
     max-width: 1200px;
     margin-left: -5%;
